--- a/README.org
+++ b/README.org
@@ -1,8 +1,9 @@
 * pg-sphinx
 
-  [[https://travis-ci.org/andy128k/pg-sphinx][https://travis-ci.org/andy128k/pg-sphinx.svg?branch=master]]
-
-  Pg-sphinx is an extension for PostgreSQL which allows to integrate Sphinx search engine.
+  Pg-sphinx is an extension for PostgreSQL which allows to integrate Sphinx search engine \ Manticore fork with cfg_scheme_or_prefix.
+  #+BEGIN_SRC sql
+  SELECT "key", "value" FROM [cfg_scheme_or_prefix]sphinx_config
+  #+END_SRC
 
 ** Installation
 
@@ -23,7 +24,7 @@
   Superuser is required.
 
   #+BEGIN_SRC sh
-  echo 'CREATE EXTENSION sphinx;' | psql -U postgres mydatabase
+  sudo -u postgres psql -c "CREATE EXTENSION sphinx;"
   #+END_SRC
 
 *** Uninstall
@@ -48,13 +49,14 @@
 
   #+BEGIN_SRC sql
   sphinx_select(
-      /*index*/     varchar,
-      /*query*/     varchar,
-      /*condition*/ varchar,
-      /*order*/     varchar,
-      /*offset*/    int,
-      /*limit*/     int,
-      /*options*/   varchar)
+      /*index*/                varchar,
+      /*query*/                varchar,
+      /*condition*/            varchar,
+      /*order*/                varchar,
+      /*offset*/               int,
+      /*limit*/                int,
+      /*options*/              varchar,
+	  /*cfg_scheme_or_prefix*/ varchar)
   #+END_SRC
 
   Returns pairs (id, weight).
@@ -63,9 +65,10 @@
 
   #+BEGIN_SRC sql
   sphinx_replace(
-      /*index*/     varchar,
-      /*id*/        int,
-      /*data*/      varchar[])
+      /*index*/                varchar,
+      /*id*/                   int,
+      /*data*/                 varchar[],
+	  /*cfg_scheme_or_prefix*/ varchar)
   #+END_SRC
 
   Updates document with specified id. Data array must have following format:
@@ -75,8 +78,9 @@
 
   #+BEGIN_SRC sql
   sphinx_delete(
-      /*index*/     varchar,
-      /*id*/        int)
+      /*index*/                varchar,
+      /*id*/                   int,
+	  /*cfg_scheme_or_prefix*/ varchar)
   #+END_SRC
 
   Removes specified document.
@@ -85,11 +89,12 @@
 
   #+BEGIN_SRC sql
   sphinx_snippet(
-      /*index*/     varchar,
-      /*query*/     varchar,
-      /*data*/      varchar,
-      /*before*/    varchar,
-      /*after*/     varchar)
+      /*index*/                varchar,
+      /*query*/                varchar,
+      /*data*/                 varchar,
+      /*before*/               varchar,
+      /*after*/                varchar,
+      /*cfg_scheme_or_prefix*/ varchar)
   #+END_SRC
 
   Returns snippets for a given data and search query.
